Alterando título da página

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_TITLE = RC React App
+REACT_APP_TITLE = Rodrigo Carneiro | Portfolio
 REACT_APP_DESCRIPTION = Project to start a React application
